# GMPlayer

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  revert_commit.patch  tsconfig.json  vercel.json  vite.config.js  vite.config.ts
.github/workflows/: build-app.yml  build-production.yaml
api/: audio-proxy.ts
public/: tray-popup.html
scripts/: build-wasm.mjs  gen-dev-version.mjs
src/: App.vue  env.d.ts  main.ts  slave-main.ts
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: migrated.json  mobile.json  taskbar-lyric-manager.json  taskbar-lyric-window.json
src-tauri/crates/audio-analysis/: Cargo.toml
src-tauri/crates/audio-analysis/pkg/: audio_analysis.d.ts  audio_analysis.js  audio_analysis_bg.js  audio_analysis_bg.wasm  audio_analysis_bg.wasm.d.ts  package.json
src-tauri/crates/audio-analysis/src/: lib.rs  wasm.rs
src-tauri/crates/audio-backend/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/crates/audio-backend/permissions/: default.toml
src-tauri/crates/audio-backend/permissions/autogenerated/commands/: audio_get_analysis_low_freq.toml  audio_get_analysis_raw_bins.toml  audio_get_analysis_spectrum.toml  audio_get_info.toml  audio_get_spectrum.toml  audio_get_state.toml  audio_open.toml  audio_open_crossfade.toml  audio_open_url.toml  audio_pause.toml  audio_play.toml  audio_poll_events.toml  audio_seek.toml  audio_set_mute.toml  audio_set_session.toml  audio_set_spectrum_config.toml  audio_set_volume.toml  audio_stop.toml  audio_toggle_playback.toml  queue_add.toml  queue_clear.toml  queue_get_all.toml  queue_get_loop_mode.toml  queue_next.toml  queue_prev.toml  queue_remove.toml  queue_set_index.toml  queue_set_loop_mode.toml
src-tauri/crates/audio-backend/pkg/: .gitignore  gmplayer_audio_backend.d.ts  gmplayer_audio_backend.js  gmplayer_audio_backend_bg.js  gmplayer_audio_backend_bg.wasm  gmplayer_audio_backend_bg.wasm.d.ts  package.json
src-tauri/crates/audio-backend/src/: analysis.rs  automix.rs  commands.rs  error.rs  lib.rs  spectrum.rs  types.rs  wasm.rs  ws_server.rs
src-tauri/crates/audio-backend/src/automix/: analysis.rs  mod.rs  structure.rs  vocal.rs
src-tauri/crates/audio-backend/src/decoder/: mod.rs  symphonia.rs
src-tauri/crates/audio-backend/src/effects/: mod.rs
src-tauri/crates/audio-backend/src/metadata/: mod.rs
src-tauri/crates/audio-backend/src/output/: config.rs  mod.rs  render.rs
src-tauri/crates/audio-backend/src/output/platform/: android.rs  desktop.rs  linux.rs  macos.rs  mod.rs  other.rs  windows.rs
src-tauri/crates/audio-backend/src/player/: api.rs  automix.rs  automix_runtime.rs  clock.rs  messages.rs  mixer.rs  mod.rs  output_runtime.rs  platform.rs  playback.rs  queue.rs  seek.rs  status.rs
src-tauri/crates/lowfreq/: Cargo.toml
src-tauri/crates/lowfreq-wasm/: Cargo.toml
src-tauri/crates/lowfreq-wasm/src/: lib.rs
src-tauri/crates/now-playing-controls/: Cargo.toml
src-tauri/crates/orientation/: Cargo.toml  tauri.conf.json
src-tauri/crates/orientation/permissions/: allow-set-screen-orientation.toml  default.toml  deny-set-screen-orientation.toml
src-tauri/crates/orientation/permissions/autogenerated/: reference.md
src-tauri/crates/orientation/permissions/commands/: set-screen-orientation.toml
src-tauri/crates/orientation/permissions/schemas/: schema.json
src-tauri/crates/orientation/src/: lib.rs
src-tauri/crates/taskbar-lyric/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/crates/taskbar-lyric/permissions/: allow-close-taskbar-lyric.toml  allow-open-taskbar-lyric-devtools.toml  allow-open-taskbar-lyric.toml  allow-set-click-interception.toml  allow-set-forwarding-enabled.toml  allow-stop-mouse-hook.toml  default.toml
src-tauri/crates/taskbar-lyric/permissions/autogenerated/: reference.md
src-tauri/crates/taskbar-lyric/permissions/autogenerated/commands/: permissions.toml
src-tauri/crates/taskbar-lyric/permissions/schemas/: schema.json
src-tauri/crates/taskbar-lyric/src/: lib.rs  mouse_forward.rs  taskbar.rs  webview_finder.rs
src-tauri/crates/tauri-plugin-now-playing-controls/: Cargo.toml
src-tauri/crates/tauri-plugin-now-playing-controls/permissions/: allow-clear.toml  allow-initialize.toml  allow-set-enabled.toml  allow-update-play-mode.toml  allow-update-state.toml  allow-update-timeline.toml  default.toml
src-tauri/crates/tauri-plugin-now-playing-controls/permissions/autogenerated/: reference.md
src-tauri/crates/tauri-plugin-now-playing-controls/permissions/schemas/: schema.json
src-tauri/crates/tauri-plugin-now-playing-controls/src/: commands.rs  lib.rs
src-tauri/src/: lib.rs  main.rs  shared.rs
src-tauri/src/algorithms/: audio_analysis.rs  format_number.rs  mod.rs
src-tauri/src/desktop/: linux_graphics.rs  mod.rs
src-tauri/src/mobile/: mod.rs
src-tauri/src/window/: config.rs  manager.rs  mod.rs
src/api/: album.ts  artist.ts  comment.ts  index.ts  listenTogether.ts  song.js  song.ts  types.ts
src/components/Banner/: index.vue
src/components/Common/: OverflowMarquee.vue
src/composables/: useAppUpdater.ts  useBigPlayerCommon.ts  useContentPanelAccent.ts  useDspSettings.ts  useFullscreen.ts  useMobileCoverFrame.ts  useNativeMediaControls.ts  usePwaThemeColor.ts  useResponsiveLayout.ts  useTabTransition.ts
src/locale/: index.ts
src/locale/lang/: en.js  (+3 more)
src/router/: index.ts  routes.ts
src/services/: lyricsService.ts
src/store/: index.ts  listenTogether.ts  musicData.js  musicData.ts  musicLyric.ts  musicPersistedData.ts  musicPlaybackData.ts  musicPlaybackResume.ts  musicTypes.ts  settingData.js  settingData.ts  siteData.ts  userData.ts
src/style/: animate.scss  global.scss
src/types/: globals.d.ts
src/utils/: Player.js  formRules.ts  getCoverColor.ts  getLanguageData.ts  lowFreqVolumeAnalyzer.ts  ncmImageUrl.ts  neteaseClient.ts  parseLyric.ts  parseTTML.ts  playlistLayout.ts  request.js  request.ts  timeTools.ts  transformSongData.ts  types.d.ts
(+206 files in other folders)
