[package]
name = "gmplayer-audio-backend"
version = "0.1.0"
edition = "2021"
description = "Audio player backend using Symphonia + rodio, inspired by AMLL player-core"
authors = ["GBCLStudio"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "gmplayer_audio_backend"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
audio-analysis = { path = "../audio-analysis" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
symphonia = { version = "0.5", default-features = false, features = [
  "mp3",
  "aac",
  "alac",
  "flac",
  "vorbis",
  "pcm",
  "isomp4",
  "ogg",
  "wav",
] }
# Use Symphonia for rodio's decoding so we get reliable try_seek across
# formats (the default minimp3/claxon decoders mostly can't seek). The
# `symphonia-all` feature is additive — rodio prefers Symphonia when it
# can decode a given file.
rodio = { version = "0.20", features = ["symphonia-all"] }
# Direct cpal dep for explicit output-stream config (force stereo so the
# default 5.1/7.1 device layout on Windows doesn't burn CPU upmixing inside
# the audio callback — that work gets deprioritised by EcoQoS when the app
# is backgrounded and shows up as stutter). Version pinned to whatever
# rodio 0.20 already brings in transitively.
cpal = { version = "0.15", features = ["oboe-shared-stdcxx"] }
rustfft = "6"
parking_lot = "0.12"
log = "0.4"
tauri = { version = "2" }
ureq = "2"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
anyhow = "1"
tracing = "0.1"
tempfile = "3"

[target.'cfg(all(not(target_arch = "wasm32"), target_os = "windows"))'.dependencies.windows]
version = "0.54"
features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_System_Com",
]

[target.'cfg(all(not(target_arch = "wasm32"), target_os = "macos"))'.dependencies]
coreaudio-rs = { version = "0.11", default-features = false, features = [
  "core_audio",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
symphonia = { version = "0.5", default-features = false, features = [
  "mp3",
  "aac",
  "alac",
  "flac",
  "vorbis",
  "pcm",
  "isomp4",
  "ogg",
  "wav",
] }

# NOTE: Cargo only honours `[profile.*]` from the workspace root
# (`src-tauri/Cargo.toml`), which already sets opt-level = 3 + fat LTO for
# release. A `[profile.release]` here would be silently ignored, so it is
# intentionally omitted.

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
