[package]
name = "gmplayer-audio-backend"
version = "0.1.0"
edition = "2021"
description = "Audio player backend using Symphonia + rodio, inspired by AMLL player-core"
authors = ["GBCLStudio"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "gmplayer_audio_backend"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
audio-analysis = { path = "../audio-analysis" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
symphonia = { version = "0.5", default-features = false, features = [
  "mp3",
  "aac",
  "alac",
  "flac",
  "vorbis",
  "pcm",
  "isomp4",
  "ogg",
  "wav",
] }
# Rodio is used only for Decoder/Source. Disable its default playback and
# recording adapters: rodio 0.22 otherwise pulls CPAL 0.17, whose Linux output
# is ALSA-only. Native playback is handled below by CPAL 0.18's PulseAudio
# backend. Keep Symphonia enabled for reliable try_seek across formats.
rodio = { version = "0.22", default-features = false, features = ["symphonia-all"] }
# Direct CPAL dependency for explicit output-stream configuration. On Linux,
# prefer the shared PulseAudio protocol backend (also served by pipewire-pulse)
# and let CPAL fall back to ALSA when no sound server is available. Unlike the
# native PipeWire backend, this does not add a libpipewire development-package
# requirement to Linux/CI builds. `realtime` promotes eligible WASAPI/ALSA
# callbacks; CoreAudio already owns callback scheduling.
cpal = { version = "0.18", features = ["pulseaudio", "realtime"] }
rustfft = "6"
parking_lot = "0.12"
rtrb = "0.3.4"
log = "0.4"
tauri = { version = "2" }
ureq = "2"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
anyhow = "1"
tracing = "0.1"
tempfile = "3"

[target.'cfg(all(not(target_arch = "wasm32"), target_os = "windows"))'.dependencies.windows]
version = "0.54"
features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_System_Com",
]

[target.'cfg(all(not(target_arch = "wasm32"), target_os = "macos"))'.dependencies]
coreaudio-rs = { version = "0.11", default-features = false, features = [
  "core_audio",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
symphonia = { version = "0.5", default-features = false, features = [
  "mp3",
  "aac",
  "alac",
  "flac",
  "vorbis",
  "pcm",
  "isomp4",
  "ogg",
  "wav",
] }

# NOTE: Cargo only honours `[profile.*]` from the workspace root
# (`src-tauri/Cargo.toml`), which already sets opt-level = 3 + fat LTO for
# release. A `[profile.release]` here would be silently ignored, so it is
# intentionally omitted.

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
