[package]
name = "lowfreq-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for lowfreq — unified FFT spectrum + low-frequency volume analysis"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lowfreq = { path = "../lowfreq" }
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
