[package]
name = "gmplayer-orientation"
version = "0.1.0"
edition = "2021"
description = "Orientation plugin for GMPlayer - delegates screen orientation to Android Kotlin side."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2" }

[package.metadata]
version = "0.1.0"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "gmplayer_orientation"
